--- a/pages/student-list/student-list.component.html
+++ b/pages/student-list/student-list.component.html
@@ -9,7 +9,7 @@
                     <th>Course</th>
                     <th>Email</th>
                     <th>Actions</th> 
-                    
+
                 </tr>
             </thead>
             <tbody>
@@ -20,7 +20,7 @@
                     <td>{{item.course}}</td>
                     <td>{{item.email}}</td>
                     <td>
-                        <i class="bi bi-eye-fill pe-2"></i>
+                        <i class="bi bi-eye-fill pe-2" (click)="viewStudents(item.id)"></i>
                         <i class="bi bi-pencil-square"></i>
                         <i class="bi bi-trash3-fill ps-2"></i>
                     </td>
