--- a/pages/student-list/student-list.component.html
+++ b/pages/student-list/student-list.component.html
@@ -21,8 +21,8 @@
                     <td>{{item.email}}</td>
                     <td>
                         <i class="bi bi-eye-fill pe-2" (click)="viewStudents(item.id)"></i>
-                        <i class="bi bi-pencil-square"></i>
-                        <i class="bi bi-trash3-fill ps-2"></i>
+                        <i class="bi bi-pencil-square" (click)="editstudent(item.id)"></i>
+                        <i class="bi bi-trash3-fill ps-2" (click)="deleteRecord(item.id)"></i>
                     </td>
                     
                 </tr>
